# server.js
@@ -1,42 +1,76 @@
 const express = require('express');
 const bodyParser = require('body-parser');
-const app = express();
+const { ApolloServer } = require('@apollo/server');
+const { expressMiddleware } = require('@apollo/server/express4');
+const { makeExecutableSchema } = require('@graphql-tools/schema');
 const ngrok = require('ngrok');
 const YAML = require('yamljs');
 const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = YAML.load('config/swagger.yaml');
+const cors = require('cors');
+const typeDefs = require('./graphql/schema/schema');
+const resolvers = require('./graphql/resolvers/resolvers');
+const redis=require('redis')
 
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-  
+const app = express();
 app.use(bodyParser.json());
+app.use(cors());
+
+let redisClient;
+(
+  async()=>{
+      redisClient=redis.createClient();
+      redisClient.on('error',(error)=>
+      {
+        console.log('error.message')
+      })
+      await redisClient.connect;
+    }
+)
+
+app.use(express.urlencoded({ extended:true}));
+const PORT = process.env.PORT || 8080;
 
 
-app.use('/auth', require('./routes/authRoutes'));
-app.use('/products', require('./routes/productRoutes'));
-app.use('/orders', require('./routes/orderRoutes'));
- 
-
+//simple welcome api for home page
 app.get('/', (req, res) => {
   res.send('Welcome to the E-commerce API');
 });
 
-const PORT = process.env.PORT ||8080 ;
-  
+
+//  Swagger
+const swaggerDocument = YAML.load('config/swagger.yaml');
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
+// routes
+app.use('/auth', require('./routes/authRoutes'));
+app.use('/products', require('./routes/productRoutes'));
+app.use('/orders', require('./routes/orderRoutes'));
+
+const schema = makeExecutableSchema({
+  typeDefs,
+  resolvers,
+});
+
+const server = new ApolloServer({
+  typeDefs,
+  resolvers
+});
+const startServer = async () => {
+  await server.start();
+  app.use('/graphql', expressMiddleware(server));}
+
+// Apply Apollo Server as middleware to Express
+(async () => {
+  await server.start();
+  app.use('/graphql', expressMiddleware(server));
+})();
+
+
 
 app.listen(PORT, async () => {
   console.log(`Server is running on port ${PORT}`);
-
-  // try {
-  //   // Start ngrok and create a tunnel
-  //   const url = await ngrok.connect({
-  //     addr: PORT,
-  //     authtoken: '2j5u9nzuxuE7QZBmzNG5CHpMPDa_6xFuJw3Dwk5xtL81emivb',  // Add your ngrok auth token here
-  //     region: 'us',                  // Optional: Set the region (us, eu, au, ap, sa, jp, in)
-  //   });
-  //   console.log(`ngrok tunnel opened at ${url}`);
-  // }catch (error) {
-  //   console.error('Error starting ngrok:', error);
-  // }
 });
- 
+
+
+
